# Cartomancien-virtuel

./: .coveragerc  .gitignore  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md  card_extractor.py  card_recognizer.py  main.py  prediction.py  pyproject.toml  tts.py
data/: settings.json
data/prompts/: questions_system.txt  questions_user.txt  reading_system.txt  reading_user.txt
data/tarot_data/: Tarot_(carte).txt  Tarot_de_Marseille.txt  Tarot_divinatoire.txt
scripts/: extract_tarot_pages.py  setup_project.bat  setup_project.sh
src/: card.py  card_extractor.py  card_recognizer.py  main.py  stt.py  tarot_app.py  tarot_questions.py  tarot_rag.py  tarot_reader.py  tts.py  utils.py
tests/: conftest.py  test_card_extractor.py  test_card_recognizer.py  test_pipeline.py  test_tarot_questions.py  test_tarot_rag.py  test_tarot_reader.py
