[project]
name = "cartomancien-virtuel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.6",
    "coverage>=7.12.0",
    "ollama>=0.6.1",
    "opencv-python>=4.12.0.88",
    "piper-tts>=1.3.0",
    "pytest>=9.0.1",
    "pyttsx3>=2.99",
    "sentence-transformers>=5.1.2",
    "sounddevice>=0.5.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wikipedia-api>=0.8.1",
]
